--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier . --write",
+    "seed": "ts-node prisma/seed.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
